# algo-trading

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml  requirements-dashboard.txt  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
config/: logging.yaml  settings.example.yaml  settings.yaml
deploy/: algo-trading.service  setup-vps.sh
scripts/: fetch_historical.py  finetune_tsmom.py  monte_carlo.py  optimize.py  optimize_tsmom.py  optimize_tsmom_v2.py  param_sensitivity.py  regime_backtest.py  run_backtest.py  run_live.py  test_tsmom.py  validate_strategy.py  walk_forward.py
src/core/: config.py  enums.py  exceptions.py  models.py
src/dashboard/: app.py
src/data/: feed.py  historical.py
src/engine/: backtest_engine.py  live_engine.py
src/exchange/: base.py  bybit_client.py
src/execution/: backtest_broker.py  (+4 more)
tests/: conftest.py  test_backtest_engine.py  test_config_validation.py  test_dashboard_auth.py  test_deleveraging.py  test_funding.py  test_indicators.py  test_models.py  test_monte_carlo.py  test_param_sensitivity.py  test_persistence.py  test_regime_backtest.py  test_regime_filter.py  test_retry.py  test_risk_manager.py  test_rolling_metrics.py  test_safety.py  test_strategies.py  test_telegram.py  test_timeframe_utils.py  test_token_redaction.py  test_walk_forward.py
wiki/: Architecture.md  Configuration-Reference.md  Deployment.md  Getting-Started.md  Home.md  Risk-Management.md  TSMOM-Strategy.md  Validation.md
(+24 files in other folders)
